[tool.poetry]
name = "song_preprocessor"
version = "0.2.0"
description = "Advanced agent pipeline for preprocessing song lyrics"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
httpx = "^0.25.0"
tenacity = "^8.2.0"
aiocache = "^0.11.1"
aiolimiter = "^1.0.0"
spotipy = "^2.22.0"
pymilvus = "^2.2.3"
transformers = "^4.26.1"
spacy = "^3.6.0"
textstat = "^0.8.1"
beautifulsoup4 = "^4.12.0"
pronouncing = "^0.3.0"
rake-nltk = "^1.0.6"
language-tool-python = "^2.9.1"
prometheus_client = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.5.1"
coverage = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"